# frdm-imx93-workspace

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  conanfile.py  docker-compose.yml
apps/a55/hello_app/: CMakeLists.txt  main.cpp
apps/m33/blinky/: CMakeLists.txt  main.c
docs/: CROSS_COMPILER_SETUP.md  DOCKER_BUILDS.md  DOCKER_SETUP.md
python/: pyproject.toml
python/apps/: demo_cli.py
scripts/: a55_scp_transfer.sh  a55_uart_transfer.sh  build.sh  configure.sh  flash_m33.sh  run_a55.sh  serial_connect.sh  setup_env.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
toolchains/: README.md  aarch64-imx93.cmake  arm-m33-none-eabi.cmake
